{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 62,
  "lineage": "3255ddb3-671e-38ae-d2c0-669f6b3eed54",
  "resources": [
    {
      "module": "module.module_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "AppServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01e82af4e524a0aa3",
            "arn": "arn:aws:ec2:us-west-2:905418371971:instance/i-0682324ebf935374e",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0682324ebf935374e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0eceeb7236b349eb9",
            "private_dns": "ip-10-0-2-148.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.148",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ada612da987fd96d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-092408b6722171c43",
            "tags": {
              "Name": "dev-AppServer-1"
            },
            "tags_all": {
              "Name": "dev-AppServer-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-090b937248d03cc1e"
            ]
          },
          "dependencies": [
            "module.module_vpc.aws_security_group.AppSG",
            "module.module_vpc.aws_security_group.BastionHostSG",
            "module.module_vpc.aws_subnet.pvt_sn1",
            "module.module_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01e82af4e524a0aa3",
            "arn": "arn:aws:ec2:us-west-2:905418371971:instance/i-026f9f1ae68ca4d4d",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-026f9f1ae68ca4d4d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c31c278cb1067205",
            "private_dns": "ip-10-0-2-200.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.200",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c1ad14edb25cb371",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-092408b6722171c43",
            "tags": {
              "Name": "dev-AppServer-2"
            },
            "tags_all": {
              "Name": "dev-AppServer-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-090b937248d03cc1e"
            ]
          },
          "dependencies": [
            "module.module_vpc.aws_security_group.AppSG",
            "module.module_vpc.aws_security_group.BastionHostSG",
            "module.module_vpc.aws_subnet.pvt_sn1",
            "module.module_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "BastionHost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01e82af4e524a0aa3",
            "arn": "arn:aws:ec2:us-west-2:905418371971:instance/i-0830df4bf10e9dc57",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0830df4bf10e9dc57",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03f6440d3e2d8a96d",
            "private_dns": "ip-10-0-1-175.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.175",
            "public_dns": "ec2-35-88-130-181.us-west-2.compute.amazonaws.com",
            "public_ip": "35.88.130.181",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0edf53d53c36925de",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-049db797044d8ad50",
            "tags": {
              "Name": "dev-BastonHost"
            },
            "tags_all": {
              "Name": "dev-BastonHost"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a00131c07eadb0f0"
            ]
          },
          "dependencies": [
            "module.module_vpc.aws_security_group.BastionHostSG",
            "module.module_vpc.aws_subnet.pub_sn",
            "module.module_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "WebServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01e82af4e524a0aa3",
            "arn": "arn:aws:ec2:us-west-2:905418371971:instance/i-09f0b118102ebc4e1",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09f0b118102ebc4e1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-084b78d1fb4c429dd",
            "private_dns": "ip-10-0-1-235.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.235",
            "public_dns": "ec2-34-219-239-213.us-west-2.compute.amazonaws.com",
            "public_ip": "34.219.239.213",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c8fe77518beae9cf",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-049db797044d8ad50",
            "tags": {
              "Name": "dev-webServer-1"
            },
            "tags_all": {
              "Name": "dev-webServer-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02da9c23ec3b640ac"
            ]
          },
          "dependencies": [
            "module.module_vpc.aws_security_group.AppSG",
            "module.module_vpc.aws_security_group.BastionHostSG",
            "module.module_vpc.aws_security_group.WebSG",
            "module.module_vpc.aws_subnet.pub_sn",
            "module.module_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01e82af4e524a0aa3",
            "arn": "arn:aws:ec2:us-west-2:905418371971:instance/i-0aa4f7c16c8280623",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aa4f7c16c8280623",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e1ff7d664e573bf3",
            "private_dns": "ip-10-0-1-94.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.94",
            "public_dns": "ec2-54-200-236-232.us-west-2.compute.amazonaws.com",
            "public_ip": "54.200.236.232",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-029203ccbfead73ac",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-049db797044d8ad50",
            "tags": {
              "Name": "dev-webServer-2"
            },
            "tags_all": {
              "Name": "dev-webServer-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02da9c23ec3b640ac"
            ]
          },
          "dependencies": [
            "module.module_vpc.aws_security_group.AppSG",
            "module.module_vpc.aws_security_group.BastionHostSG",
            "module.module_vpc.aws_security_group.WebSG",
            "module.module_vpc.aws_subnet.pub_sn",
            "module.module_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-060bae0e3d77de901",
            "association_id": "eipassoc-0eec46cdc5280c3c6",
            "domain": "vpc",
            "id": "eipalloc-060bae0e3d77de901",
            "network_border_group": "us-west-2",
            "network_interface": "eni-04193ea9ce9d9758d",
            "private_dns": "ip-10-0-1-14.us-west-2.compute.internal",
            "private_ip": "10.0.1.14",
            "public_dns": "ec2-52-12-251-240.us-west-2.compute.amazonaws.com",
            "public_ip": "52.12.251.240",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev_eip"
            },
            "tags_all": {
              "Name": "dev_eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:905418371971:internet-gateway/igw-030f64d9432813837",
            "id": "igw-030f64d9432813837",
            "owner_id": "905418371971",
            "tags": {
              "Name": "dev_igw"
            },
            "tags_all": {
              "Name": "dev_igw"
            },
            "vpc_id": "vpc-0f398628660bee6ae"
          },
          "dependencies": [
            "module.module_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-060bae0e3d77de901",
            "association_id": "eipassoc-0eec46cdc5280c3c6",
            "connectivity_type": "public",
            "id": "nat-0e5d127a0efd86dec",
            "network_interface_id": "eni-04193ea9ce9d9758d",
            "private_ip": "10.0.1.14",
            "public_ip": "52.12.251.240",
            "subnet_id": "subnet-049db797044d8ad50",
            "tags": {
              "Name": "dev_nat"
            },
            "tags_all": {
              "Name": "dev_nat"
            }
          },
          "dependencies": [
            "module.module_vpc.aws_eip.eip",
            "module.module_vpc.aws_internet_gateway.igw",
            "module.module_vpc.aws_subnet.pub_sn",
            "module.module_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:905418371971:route-table/rtb-0885be8af998f5924",
            "id": "rtb-0885be8af998f5924",
            "owner_id": "905418371971",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-030f64d9432813837",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev_pub_rt"
            },
            "tags_all": {
              "Name": "dev_pub_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f398628660bee6ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_vpc.aws_internet_gateway.igw",
            "module.module_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pvt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:905418371971:route-table/rtb-0885b8f7ccb331e3f",
            "id": "rtb-0885b8f7ccb331e3f",
            "owner_id": "905418371971",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e5d127a0efd86dec",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev_pvt_rt"
            },
            "tags_all": {
              "Name": "dev_pvt_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f398628660bee6ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_vpc.aws_eip.eip",
            "module.module_vpc.aws_internet_gateway.igw",
            "module.module_vpc.aws_nat_gateway.nat",
            "module.module_vpc.aws_subnet.pub_sn",
            "module.module_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_sn_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f76e74a27d3184d0",
            "route_table_id": "rtb-0885be8af998f5924",
            "subnet_id": "subnet-049db797044d8ad50"
          },
          "dependencies": [
            "module.module_vpc.aws_internet_gateway.igw",
            "module.module_vpc.aws_route_table.pub",
            "module.module_vpc.aws_subnet.pub_sn",
            "module.module_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt_sn_ass1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e44c96cf937dd14f",
            "route_table_id": "rtb-0885b8f7ccb331e3f",
            "subnet_id": "subnet-092408b6722171c43"
          },
          "dependencies": [
            "module.module_vpc.aws_eip.eip",
            "module.module_vpc.aws_internet_gateway.igw",
            "module.module_vpc.aws_nat_gateway.nat",
            "module.module_vpc.aws_route_table.pvt",
            "module.module_vpc.aws_subnet.pub_sn",
            "module.module_vpc.aws_subnet.pvt_sn1",
            "module.module_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt_sn_ass2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0915fce65e53c8962",
            "route_table_id": "rtb-0885b8f7ccb331e3f",
            "subnet_id": "subnet-099b32e00d735b671"
          },
          "dependencies": [
            "module.module_vpc.aws_eip.eip",
            "module.module_vpc.aws_internet_gateway.igw",
            "module.module_vpc.aws_nat_gateway.nat",
            "module.module_vpc.aws_route_table.pvt",
            "module.module_vpc.aws_subnet.pub_sn",
            "module.module_vpc.aws_subnet.pvt_sn2",
            "module.module_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvt_sn_ass3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0414db2da7c308d75",
            "route_table_id": "rtb-0885b8f7ccb331e3f",
            "subnet_id": "subnet-090ab27ad6b55ec63"
          },
          "dependencies": [
            "module.module_vpc.aws_eip.eip",
            "module.module_vpc.aws_internet_gateway.igw",
            "module.module_vpc.aws_nat_gateway.nat",
            "module.module_vpc.aws_route_table.pvt",
            "module.module_vpc.aws_subnet.pub_sn",
            "module.module_vpc.aws_subnet.pvt_sn3",
            "module.module_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "AppSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:905418371971:security-group/sg-090b937248d03cc1e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all Outbound Traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-090b937248d03cc1e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Works for Ping",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [],
                "description": "Allow traffic from BastionHostSG",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a00131c07eadb0f0"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev_app_sg",
            "name_prefix": "",
            "owner_id": "905418371971",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev_app_sg"
            },
            "tags_all": {
              "Name": "dev_app_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f398628660bee6ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_vpc.aws_security_group.BastionHostSG",
            "module.module_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "BastionHostSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:905418371971:security-group/sg-0a00131c07eadb0f0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all Outbound Traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a00131c07eadb0f0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ICMPv4 Traffic",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH Traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev_bastion_sg",
            "name_prefix": "",
            "owner_id": "905418371971",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev_bastion_sg"
            },
            "tags_all": {
              "Name": "dev_bastion_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f398628660bee6ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "DbSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:905418371971:security-group/sg-0286635d3b72cf515",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all Outbound Traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0286635d3b72cf515",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from AppSG",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-090b937248d03cc1e"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "Allow traffic from BastionHostSG",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a00131c07eadb0f0"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "dev_database_sg",
            "name_prefix": "",
            "owner_id": "905418371971",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev_db_sg"
            },
            "tags_all": {
              "Name": "dev_db_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f398628660bee6ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_vpc.aws_security_group.AppSG",
            "module.module_vpc.aws_security_group.BastionHostSG",
            "module.module_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "WebSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:905418371971:security-group/sg-02da9c23ec3b640ac",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all Outbound Traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02da9c23ec3b640ac",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP Traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS Traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH Traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Works for Ping",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [],
                "description": "Allow traffic from App SG",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-090b937248d03cc1e"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev_web_sg",
            "name_prefix": "",
            "owner_id": "905418371971",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev_web_sg"
            },
            "tags_all": {
              "Name": "dev_web_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f398628660bee6ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_vpc.aws_security_group.AppSG",
            "module.module_vpc.aws_security_group.BastionHostSG",
            "module.module_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_to_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow traffic from Web SG",
            "from_port": 22,
            "id": "sgrule-545598542",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-090b937248d03cc1e",
            "security_group_rule_id": "sgr-0331b22cf19ae8b2a",
            "self": false,
            "source_security_group_id": "sg-02da9c23ec3b640ac",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_vpc.aws_security_group.AppSG",
            "module.module_vpc.aws_security_group.BastionHostSG",
            "module.module_vpc.aws_security_group.WebSG",
            "module.module_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_to_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allows traffic from App",
            "from_port": 22,
            "id": "sgrule-1684364308",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a00131c07eadb0f0",
            "security_group_rule_id": "sgr-09bb8ddb40266c713",
            "self": false,
            "source_security_group_id": "sg-090b937248d03cc1e",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_vpc.aws_security_group.AppSG",
            "module.module_vpc.aws_security_group.BastionHostSG",
            "module.module_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "database_to_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allows traffic from DbSG",
            "from_port": 3306,
            "id": "sgrule-1107066882",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a00131c07eadb0f0",
            "security_group_rule_id": "sgr-04822cbeb2209f98c",
            "self": false,
            "source_security_group_id": "sg-0286635d3b72cf515",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_vpc.aws_security_group.AppSG",
            "module.module_vpc.aws_security_group.BastionHostSG",
            "module.module_vpc.aws_security_group.DbSG",
            "module.module_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db_to_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allows traffic from DbSG",
            "from_port": 22,
            "id": "sgrule-1605544205",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-090b937248d03cc1e",
            "security_group_rule_id": "sgr-0a0dd9aa6baf9351f",
            "self": false,
            "source_security_group_id": "sg-0286635d3b72cf515",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.module_vpc.aws_security_group.AppSG",
            "module.module_vpc.aws_security_group.BastionHostSG",
            "module.module_vpc.aws_security_group.DbSG",
            "module.module_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:905418371971:subnet/subnet-049db797044d8ad50",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049db797044d8ad50",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418371971",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_pub_sn"
            },
            "tags_all": {
              "Name": "dev_pub_sn"
            },
            "vpc_id": "vpc-0f398628660bee6ae"
          },
          "dependencies": [
            "module.module_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_sn1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:905418371971:subnet/subnet-092408b6722171c43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092408b6722171c43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418371971",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_pvt_sn-1"
            },
            "tags_all": {
              "Name": "dev_pvt_sn-1"
            },
            "vpc_id": "vpc-0f398628660bee6ae"
          },
          "dependencies": [
            "module.module_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_sn2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:905418371971:subnet/subnet-099b32e00d735b671",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099b32e00d735b671",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418371971",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_pvt_sn-2"
            },
            "tags_all": {
              "Name": "dev_pvt_sn-2"
            },
            "vpc_id": "vpc-0f398628660bee6ae"
          },
          "dependencies": [
            "module.module_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvt_sn3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:905418371971:subnet/subnet-090ab27ad6b55ec63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090ab27ad6b55ec63",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418371971",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_pvt_sn-3"
            },
            "tags_all": {
              "Name": "dev_pvt_sn-3"
            },
            "vpc_id": "vpc-0f398628660bee6ae"
          },
          "dependencies": [
            "module.module_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.module_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:905418371971:vpc/vpc-0f398628660bee6ae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-083599818c326cabf",
            "default_route_table_id": "rtb-094c9138105111dc6",
            "default_security_group_id": "sg-0a6bf744c6c211d4c",
            "dhcp_options_id": "dopt-084305b405b24241c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f398628660bee6ae",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-094c9138105111dc6",
            "owner_id": "905418371971",
            "tags": {
              "Name": "dev_vpc"
            },
            "tags_all": {
              "Name": "dev_vpc"
            }
          }
        }
      ]
    }
  ]
}